5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1822_3176.log
== TEST (2019-06-13 11:11:29) 
-- CODE:
s = input("Digite: ")

s =s.upper()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]="e" or s[i]="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)
-- ERROR:
File "XXXX", line 6
    if s[i]=="a" or s[i]="e" or s[i]="i" or s[i]=="o" or s[i]=="u":
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:54) 
-- CODE:
s = input("Digite: ")

s =s.upper()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)
-- OUTPUT:
0
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:10) 
-- CODE:
s = input("Digite: ")

s =s.upper()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(len(s)-aux)
print(aux)
-- OUTPUT:
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:12:21) 
-- CODE:
s = input("Digite: ")

s =s.upper()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(len(s)-aux)
print(aux)
-- EXECUTION TIME:
0.940546
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
8
0
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
8
0
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:24) 
-- CODE:
s = input("Digite: ")

s =s.upper()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(len(s)-aux)
print(aux)
-- OUTPUT:
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:13:04) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(len(s)-aux)
print(aux)
-- EXECUTION TIME:
0.727674
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
5
3
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
3
5
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:05) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(len(s)-aux)
print(aux)
-- OUTPUT:
5
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:28) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)

-- OUTPUT:
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:38) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)

-- OUTPUT:
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:11) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)

-- OUTPUT:
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:14:23) 
-- CODE:
s = input("Digite: ")

s =s.lower()
aux=0
for i in range(len(s)):
	if s[i]=="a" or s[i]=="e" or s[i]=="i" or s[i]=="o" or s[i]=="u":
		aux +=1
print(aux)
print(len(s)-aux)

-- EXECUTION TIME:
0.623769
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
